# vipincome

./: .env.local  .replit  ENVIRONMENT_SETUP.md  README.md  REDIS_SETUP.md  api_efficiency_optimizer.py  api_routes.py  app.py  automated_spread_pipeline.py  background_tasks.py  backtest_service.py  bulk_etf_calculator.py  check_database.py  configure_upstash.py  csv_data_loader.py  database.py  database_models.py  db_init.py  debit_spread_analyzer.py  debit_spread_api.py  emergency_fixes.py  emergency_performance_mode.py  enhanced_etf_scoring.py  enhanced_etf_scoring_polygon.py  enhanced_market_data.py  enhanced_polygon_client.py  etf_scores.db  etf_scores_complete.csv  extreme_rsi_analysis.py  flask_integration.py  gamma_rsi_calculator.py  high_traffic_mode.py  import_csv.py  load_complete_data.py  load_test_script.js  main.js  main.py  main.py.backup  main.py.broken  market_data.py  (+67 more)
.next/: trace
api/: analyze-spread.js  chart-data.js  index.js  test-tradelist.js  test.js  ticker-details.js  tickers.js  validate-jwt.js
attached_assets/: Pasted--2025-06-04-11-15-01-0000-1356-INFO-Handling-signal-winch-2025-06-04-11-15-01-0000-1356--1749035727134.txt  Pasted--275-0-280-0-5-0-wide-Cost-0-16-ROI-3125-8-Found-0-viable-spreads-from-35-checked--1749044572173.txt  Pasted--73-0-74-0-1-0-wide-Cost-0-10-ROI-900-0-74-0-75-0-1-0-wide-Cost-0-10-ROI-90-1749045045988.txt  Pasted--73-0-74-0-1-0-wide-Cost-0-37-ROI-169-1-74-0-75-0-1-0-wide-Cost-0-35-ROI-18-1749044938644.txt  Pasted--Looking-for-narrow-spreads-with-ROI-8-20-Price-calc-0-0-strike-intrinsic-205-01-pr-1749040654537.txt  (+66 more)
(+44 files in other folders)
