[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "openai>=1.74.0",
    "pandas>=2.2.3",
    "polygon-api-client>=1.14.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "ta>=0.11.0",
    "trafilatura>=2.0.0",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "yfinance>=0.2.55",
]
